fix scrollbars in search and factsheet

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -28,8 +28,7 @@ html, body {
 a { text-decoration: none; }
 
 main {
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
   position: fixed;
   bottom: 75px;
   left: 0px;
