--- a/app/assets/stylesheets/protected_areas.css.scss
+++ b/app/assets/stylesheets/protected_areas.css.scss
@@ -3,7 +3,8 @@
 
 .factsheet {
   overflow-y: auto;
-  width: 400px;
+  width: 415px;
+  height: 100%;
   float:left;
 }
 
